fixed bug that prevented multiple gantts from working on a single page made tmp gant specific to prevent cross-bleed added slots remaining functionality with feedback for overbooking projects

--- a/gantt.css
+++ b/gantt.css
@@ -5,3 +5,9 @@ td, th {
 table {
     border-collapse: collapse;
 }
+td.slotFeedback{
+    font-weight:bold;
+}
+td.selectedProject{
+    font-weight:bold;
+}
